# data-filtering

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  INSTALL.md  MobaXterm_laforgeFSULogin_20240515_033058.rtf  Questions.md  Readme.md  VAR_LIST.md  data_config.json  filter.py  filtered_data.parquet  main.py  pandasql_merge.sh  pyproject.toml  run.sh  split_by_tail_number.sh  trials.py  util.py  write_parquet.sh  ~$baXterm_laforgeFSULogin_20240515_033058.rtf
Benchmark/: benchmark.py
TABLES_ADD_20240515/: sql.js
docs/: AC_REG_CD_Analysis.md  Repository_setup.md  TODO.md  Variable_list.md  filter_config_usage.md  pandasql.md  split_by_tail_number.md  test_joining.md
filter_configs/: ata_filter.json  var_of_interest.json
javascript/: sql.js
notebooks/: Data exploration.ipynb  ReadMe.md
notebooks/.ipynb_checkpoints/: Data exploration-checkpoint.ipynb
src/: AC_REG_CD_Analysis.py  AC_REG_CD_merging.py  ATA_Per_AirCraft.py  Data.py  GE_test_joining.py  join_tables.py  main.py  split_by_tail_number.py  test_joining.py  write_parquet.py
src/_types/: DataConfig.py
src/copa_modules/: DataProcessor.py  __init__.py  data_processor.py
src/copa_modules/_data_processor/: __init__.py  data_processor.py
src/copa_modules/_error/: __init__.py  error_class.py
src/copa_modules/_logger/: logger.py
src/copa_modules/_types/: DataConfig.py  DataConfig.ts  (+6 more)
src/join_all_tables/: join1.py  join2.py  merge18.py  merges1-3.py  process_merged.py  select_1.py  utils.py
src/pandasql_joining/: ISDP LOGBOOK REPORT_query.sql  main.py
tests/: main.py  test.py
(+2 files in other folders)
