[tool.poetry]
name = "copa-data-filtering"
version = "1.0.3"
description = "Use LLM to improve plane maintenance at Copa"
authors = ["Anand Kamble and Gordon Erlebacher"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, < 3.13"
pandas = "^2.2.2"
modin = "^0.29.0"
dfply = "^0.3.3"
tidypandas = "^0.3.0"
fletcher = "^0.7.2"
static-frame = "^2.6.0"
ydata-profiling = "^4.7.0"
halo = "^0.0.31"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.scripts]
copa-data-filtering = "src.copa_modules:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
